# src/controllers/accommodations/index.ts
@@ -6,13 +6,13 @@ import {
   getUniqueAccommodationApi
 } from '../../services/accommodations';
 import AppError from '../../error/AppError';
+import { DataParamsStay } from '../../models/locations';
 
 export const getAccommodationsController = async (req: Request, res: Response) => {
   const { limit, query, guest, page } = req.query;
 
   try {
     const accommodations = await accommodationsFindAll({ guest, limit, page, query });
-
     res.json(accommodations);
   } catch (error: any) {
     res.status(error.statusCode).json({
@@ -34,10 +34,42 @@ export const getAccommodationsAutocompleteController = async (req: Request, res:
   }
 };
 export const getAccommodationsLiveController = async (req: Request, res: Response) => {
-  const { query, limit, checkIn, checkOut, page } = req.query;
-
+  const {
+    from,
+    to,
+    guests,
+    rooms,
+    amenities,
+    cities,
+    countries,
+    inventory,
+    limit,
+    listingId,
+    properties,
+    regions,
+    skip,
+    sort,
+    states
+  } = req.body;
+  const data: DataParamsStay = {
+    from,
+    to,
+    guests,
+    rooms,
+    amenities,
+    cities,
+    countries,
+    inventory,
+    limit,
+    listingId,
+    properties,
+    regions,
+    skip,
+    sort,
+    states
+  };
   try {
-    const accommodations = await accommodationsFindAllFree({ checkIn, checkOut, limit, query, page });
+    const accommodations = await accommodationsFindAllFree(data);
     res.json(accommodations);
   } catch (error: any) {
     res.status(error.statusCode).json({
@@ -45,7 +77,7 @@ export const getAccommodationsLiveController = async (req: Request, res: Respons
     });
   }
 };
-export const getUniqueAccommodation= async (req: Request, res: Response) => {
+export const getUniqueAccommodation = async (req: Request, res: Response) => {
   const { id } = req.params;
 
   if (!id) {
