# src/routes/accommodationsRoute.ts
@@ -1,14 +1,17 @@
 import express from 'express';
 import {
- getAccommodationsAutocompleteController,getAccommodationsController,getAccommodationsLiveController,getUniqueAccommodation
+  getAccommodationsAutocompleteController,
+  getAccommodationsController,
+  getAccommodationsLiveController,
+  getUniqueAccommodation
 } from '../controllers/accommodations';
 import { verifyJWT } from '../utils/jwt';
 
 const router = express.Router();
 
-router.get('/', verifyJWT, getAccommodationsController);
+router.get('/', getAccommodationsController);
 router.get('/searchAddressAutocomplete', getAccommodationsAutocompleteController);
-router.get('/reservation', verifyJWT, getAccommodationsLiveController);
+router.post('/reservation', getAccommodationsLiveController);
 router.get('/:id', verifyJWT, getUniqueAccommodation);
 
 export default router;
